Committing file:///C:/Users/jcatolico/Desktop/Git output/output-files/Resources/Scripts/require.config.js file:///C:/Users/jcatolico/Desktop/Git output/output-files/Data/SearchTopic_Chunk0.js file:///C:/Users/jcatolico/Desktop/Git output/output-files/Data/SearchStem_Chunk0.js file:///C:/Users/jcatolico/Desktop/Git output/output-files/Data/SearchPhrase_Chunk1.js file:///C:/Users/jcatolico/Desktop/Git output/output-files/Data/SearchPhrase_Chunk0.js file:///C:/Users/jcatolico/Desktop/Git output/output-files/Data/HelpSystem.xml file:///C:/Users/jcatolico/Desktop/Git output/output-files/Data/HelpSystem.js file:///C:/Users/jcatolico/Desktop/Git output/output-files/Content/D_Images/ThumbnailImage.htm file:///C:/Users/jcatolico/Desktop/Git output/output-files/Content/D_Images/Positioned Images.htm file:///C:/Users/jcatolico/Desktop/Git output/output-files/Content/D_Images/ImageWithinList.htm file:///C:/Users/jcatolico/Desktop/Git output/output-files/Content/D_Images/Images.htm file:///C:/Users/jcatolico/Desktop/Git output/output-files/Content/D_Images/ImagePositionedRight.htm file:///C:/Users/jcatolico/Desktop/Git output/output-files/Content/D_Images/ImagePositionedLeft.htm file:///C:/Users/jcatolico/Desktop/Git output/output-files/Content/C_Conditions Notes Tables/Tables.htm file:///C:/Users/jcatolico/Desktop/Git output/output-files/Content/C_Conditions Notes Tables/NotesExamplesQuotations.htm file:///C:/Users/jcatolico/Desktop/Git output/output-files/Content/C_Conditions Notes Tables/ConditionsNotesTables.htm file:///C:/Users/jcatolico/Desktop/Git output/output-files/Content/C_Conditions Notes Tables/Conditions.htm file:///C:/Users/jcatolico/Desktop/Git output/output-files/Content/B_Links and Lists/Lists.htm file:///C:/Users/jcatolico/Desktop/Git output/output-files/Content/B_Links and Lists/LinksAndLists.htm file:///C:/Users/jcatolico/Desktop/Git output/output-files/Content/B_Links and Lists/Links.htm file:///C:/Users/jcatolico/Desktop/Git output/output-files/Content/A_G

--- a/Content/A_Getting Started/Basic Steps.htm
+++ b/Content/A_Getting Started/Basic Steps.htm
@@ -187,8 +187,8 @@
                                         <div class="topic-layout">
                                             <div>
                                                 <div class="side-menu">
-                                                    <div data-sticky-container="" id="kGhpKOqyGUK_Cnb2Vj0_gg">
-                                                        <div class="sticky sticky-menu" style="width:100%" data-sticky="" data-top-anchor="kGhpKOqyGUK_Cnb2Vj0_gg:top" data-bottom-anchor="contentBody:bottom" data-sticky-on="small" data-scroll-container-on="small">
+                                                    <div data-sticky-container="" id="mokJb4mUrEafE603EqmbRA">
+                                                        <div class="sticky sticky-menu" style="width:100%" data-sticky="" data-top-anchor="mokJb4mUrEafE603EqmbRA:top" data-bottom-anchor="contentBody:bottom" data-sticky-on="small" data-scroll-container-on="small">
                                                             <ul class="nocontent menu _Skins_SideMenu mc-component" data-mc-linked-toc="Data/Tocs/Online_Output.js" data-mc-side-menu="True" data-mc-max-depth="-1" data-mc-include-icon="False" data-mc-include-indicator="False" data-mc-include-children="True" data-mc-include-siblings="True" data-mc-include-parent="True" data-mc-toc="True">
                                                             </ul>
                                                         </div>
@@ -226,6 +226,7 @@
                                                 <div role="main" id="mc-main-content">
                                                     <h1>Basic Steps</h1>
                                                     <p>Here are the basic steps for using <span class="mc-variable General.ProductName variable">Flare</span>:</p>
+                                                    <p>change</p>
                                                     <ol>
                                                         <li value="1">Create topics.</li>
                                                         <li value="2">Assemble topics for output.</li>
