--- a/Content/D_Images/Images.htm
+++ b/Content/D_Images/Images.htm
@@ -187,8 +187,8 @@
                                         <div class="topic-layout">
                                             <div>
                                                 <div class="side-menu">
-                                                    <div data-sticky-container="" id="TtVgi2foNE22aobWEoYWow">
-                                                        <div class="sticky sticky-menu" style="width:100%" data-sticky="" data-top-anchor="TtVgi2foNE22aobWEoYWow:top" data-bottom-anchor="contentBody:bottom" data-sticky-on="small" data-scroll-container-on="small">
+                                                    <div data-sticky-container="" id="GwSMeZ6ph0e2-0XubSj0fg">
+                                                        <div class="sticky sticky-menu" style="width:100%" data-sticky="" data-top-anchor="GwSMeZ6ph0e2-0XubSj0fg:top" data-bottom-anchor="contentBody:bottom" data-sticky-on="small" data-scroll-container-on="small">
                                                             <ul class="nocontent menu _Skins_SideMenu mc-component" data-mc-linked-toc="Data/Tocs/Online_Output.js" data-mc-side-menu="True" data-mc-max-depth="-1" data-mc-include-icon="False" data-mc-include-indicator="False" data-mc-include-children="True" data-mc-include-siblings="True" data-mc-include-parent="True" data-mc-toc="True">
                                                             </ul>
                                                         </div>
