--- a/Content/Sample Landing Topic.htm
+++ b/Content/Sample Landing Topic.htm
@@ -183,8 +183,8 @@
                                         <div class="topic-layout">
                                             <div>
                                                 <div class="side-menu">
-                                                    <div data-sticky-container="" id="7cpiYhuxg0O2TR55ub9KAA">
-                                                        <div class="sticky sticky-menu" style="width:100%" data-sticky="" data-top-anchor="7cpiYhuxg0O2TR55ub9KAA:top" data-bottom-anchor="contentBody:bottom" data-sticky-on="small" data-scroll-container-on="small">
+                                                    <div data-sticky-container="" id="LNczni46AUyvrEl3Osfoeg">
+                                                        <div class="sticky sticky-menu" style="width:100%" data-sticky="" data-top-anchor="LNczni46AUyvrEl3Osfoeg:top" data-bottom-anchor="contentBody:bottom" data-sticky-on="small" data-scroll-container-on="small">
                                                             <ul class="nocontent menu _Skins_SideMenu mc-component" data-mc-linked-toc="Data/Tocs/Online_Output.js" data-mc-side-menu="True" data-mc-max-depth="-1" data-mc-include-icon="False" data-mc-include-indicator="False" data-mc-include-children="True" data-mc-include-siblings="True" data-mc-include-parent="True" data-mc-toc="True">
                                                             </ul>
                                                         </div>
