--- a/Content/Search.htm
+++ b/Content/Search.htm
@@ -183,8 +183,8 @@
                                         <div class="topic-layout">
                                             <div>
                                                 <div class="side-menu">
-                                                    <div data-sticky-container="" id="LRAZs5CYJU-aDfGr-4btug">
-                                                        <div class="sticky sticky-menu" style="width:100%" data-sticky="" data-top-anchor="LRAZs5CYJU-aDfGr-4btug:top" data-bottom-anchor="contentBody:bottom" data-sticky-on="small" data-scroll-container-on="small">
+                                                    <div data-sticky-container="" id="xTD0PsI5m0i_3e_a6WHiDg">
+                                                        <div class="sticky sticky-menu" style="width:100%" data-sticky="" data-top-anchor="xTD0PsI5m0i_3e_a6WHiDg:top" data-bottom-anchor="contentBody:bottom" data-sticky-on="small" data-scroll-container-on="small">
                                                             <ul class="nocontent menu _Skins_SideMenu mc-component" data-mc-linked-toc="Data/Tocs/Online_Output.js" data-mc-side-menu="True" data-mc-max-depth="-1" data-mc-include-icon="False" data-mc-include-indicator="False" data-mc-include-children="True" data-mc-include-siblings="True" data-mc-include-parent="True" data-mc-toc="True">
                                                             </ul>
                                                         </div>
